complete banner section and responsive for small devices

--- a/index.html
+++ b/index.html
@@ -38,6 +38,18 @@
 <!-- navbar-section-End -->
 
 <!-- banner-section-Start -->
+    <section class="banner-container">
+        <div class="banner-content">
+            <h1 class="banner-title"><span class="Empowering">Empowering</span><br>
+                students from small<br> age <span class="vision">towards vision</span></h1>
+                <p class="banner-description">With the courage, Confidence, Creativity and Compassion to make<br> their Unique Contribution in a Diverse and Dynamic World.</p>
+                <button class="banner-button">Enroll Now</button>
+        </div>
+        <div class="banner-img">
+            <img src="assets/hero-kids.png" alt="">
+        </div>
+    </section>
+
   
     </header>
     <main></main>
