--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
 <!-- banner-section-Start -->
     <section class="banner-container">
         <div class="banner-content">
+           <marquee><h1 class="marquee"><span class="admission">Admission</span> <span class="Discount">Discount</span> 50%</h1></marquee>
             <h1 class="banner-title"><span class="Empowering">Empowering</span><br>
                 students from small<br> age <span class="vision">towards vision</span></h1>
                 <p class="banner-description">With the courage, Confidence, Creativity and Compassion to make<br> their Unique Contribution in a Diverse and Dynamic World.</p>
